# Skaffen-Amtiskaw

./: CLAUDE.md
ellucian-upgrades/ellucian-support/: README.md  pyproject.toml
ellucian-upgrades/ellucian-support/docs/: okta-idx-reverse-engineering.md
ellucian-upgrades/ellucian-support/scripts/: analyze_docs_har.py  analyze_saml.py  compare_requests.py  debug_identify.py  debug_related_lists.py  debug_release_page2.py  extract_docs_cookies.py  extract_page_content.py  fetch_related_items.py  find_search_apis.py  find_session_origin.py  test_defect_fields.py  test_docs_api.py  test_docs_session_bootstrap.py  test_fetch_kb.py  test_full_flow.py  test_timing.py  trace_cookies.py  trace_docs_session.py
ellucian-upgrades/ellucian-support/src/ellucian_support/: __init__.py  cli.py  client.py  confluence.py  fetch.py  release.py  ticket.py  upgrade.py
ellucian-upgrades/ellucian-support/tests/: test_confluence.py  test_release_query.py  test_upgrade.py
ellucian-upgrades/esm-cli/: PLAN.md  pyproject.toml
ellucian-upgrades/esm-cli/fixtures/: catalog.md
ellucian-upgrades/esm-cli/src/esm/: __init__.py  cli.py  client.py  selectors.py
ellucian-upgrades/esm-cli/src/esm/parsers/: base.py
ellucian-upgrades/esm-cli/tests/: __init__.py  conftest.py  test_parsers.py
ellucian-upgrades/esm-cli/tests/fixtures/v24/: env-detail.html  job-in-progress.html  login-page.html  products.html
ellucian-upgrades/runner-support/: .gitignore  pyproject.toml
ellucian-upgrades/runner-support/docs/: auth-flow.md
ellucian-upgrades/runner-support/scripts/: fetch_articles.py
new_agent/: .pre-commit-config.yaml  .yamllint.yml  flake.nix  justfile  pyproject.toml  start.sh  statix.toml
new_agent/.claude/commands/: checkpoint.md  done.md  email.md  internal.md  jira.md  journal.md  lead.md  reflect.md  research.md
new_agent/config/: system-prompt.txt
new_agent/docs/: INDEX.md
new_agent/ellucian-support/: .gitignore
new_agent/ellucian-support/docs/plans/: 2026-02-04-upgrade-automation-design.md
new_agent/ellucian-support/scripts/: analyze_coveo_search.py  analyze_har.py  check_docs_auth.py  check_saml_timing.py  debug_challenge.py  debug_related_lists2.py  debug_release_api.py  debug_release_fields.py  debug_release_page.py  dump_token_redirect.py  explore_facets.py  find_coveo_token.py  test_defect_api.py  test_docs_with_zoomin_cookies.py  test_identify.py  test_mfa_flow.py  test_search.py  trace_saml_request.py
new_agent/ellucian-support/src/ellucian_support/: auth.py  download.py  release.py  search.py
new_agent/esm-cli/: .gitignore  README.md  REVIEW.md  STORIES.md
new_agent/esm-cli/src/esm/: config.py  exceptions.py
new_agent/esm-cli/src/esm/parsers/: __init__.py
new_agent/esm-cli/tests/fixtures/v24/: available-releases.html  (+3 more)
new_agent/help/: analyze-sessions.md  ellucian-fetch-compressed.md  ellucian-find-compressed.md  ellucian-find.md  ellucian-login.md  ellucian-status-compressed.md  ellucian-status.md  help.md  lsq-query-compressed.md  lsq-reply-compressed.md  lsq-update-compressed.md  lsq-update.md  paste-compressed.md  paste.md  sessions-mark.md  sessions-pending-compressed.md  sessions-summary-compressed.md  tmux-capture.md  tmux-exec-compressed.md  tmux-exec.md  tmux-list-panes.md
new_agent/profiles/: ellucian.md  runner.md  tmux.md
new_agent/reflect/: reviewed.tsv
new_agent/runner-support/: README.md
new_agent/runner-support/docs/: README.md
new_agent/runner-support/scripts/: debug_article.py  fetch_one.py
new_agent/runner-support/src/runner_support/: __init__.py  auth.py  cli.py  client.py
new_agent/runner-support/tests/: __init__.py
new_agent/scripts/: ccstatusline-wrapper.sh
(+62 files in other folders)
