[project]
name = "ellucian-support"
version = "0.1.0"
description = "CLI and API client for Ellucian Support Center"
authors = [
    {name = "Stibbons"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "typer (>=0.20.0,<0.21.0)",
    "rich (>=14.0.0,<15.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]


[project.scripts]
ellucian-support = "ellucian_support.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[tool.poetry]
packages = [{include = "ellucian_support", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-httpx (>=0.36.0,<0.37.0)"
]
