[project]
name = "esm-cli"
version = "0.1.0"
description = "CLI for Ellucian Solution Manager"
authors = [
    {name = "Stibbons"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "typer (>=0.9.0,<1.0.0)",
    "rich (>=13.0.0,<14.0.0)"
]

[project.scripts]
esm = "esm.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
